<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.notekeeperk.ui.activities.EditActivity">

    <item
        android:id="@+id/action_meet"
        android:icon="@drawable/ic_group_white_24"
        android:title="@string/meet"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_next"
        android:icon="@android:drawable/ic_media_next"
        android:title="@string/next"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_cancel"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="Cancel"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_send_email"
        android:title="send as email" />

</menu>
