<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <import type="com.example.data.DataManager"/>
        <import type="java.util.List"/>
        <import type="java.util.Map"/>
        <import type="com.example.data.CourseInfo"/>
        <import type="com.example.data.NoteInfo"/>
        <variable
            name="notes"
            type="List&lt;com.example.data.NoteInfo>" />
        <variable
            name="course"
            type="Map&lt;String,CourseInfo>" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ListActivity"
    tools:showIn="@layout/app_bar_list">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listItems"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/item_note_list" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>